--- a/addWindow.html
+++ b/addWindow.html
@@ -11,5 +11,18 @@
       </div>
       <button type="submit">add Item</button>
     </form>
+
+    <script>
+      const { ipcRenderer } = require("electron");
+
+      const form = document.querySelector("form");
+      form.addEventListener("submit", submitForm);
+
+      function submitForm(e) {
+        e.preventDefault();
+        const item = document.querySelector("#item").value;
+        ipcRenderer.send("item:add", item);
+      }
+    </script>
   </body>
 </html>
