--- a/mainWindow.html
+++ b/mainWindow.html
@@ -11,12 +11,26 @@
       const electron = require("electron");
       const { ipcRenderer } = electron;
       const ul = document.querySelector("ul");
+
+      // Catch Add Item
       ipcRenderer.on("item:add", function (e, item) {
         const li = document.createElement("li");
         const itemText = document.createTextNode(item);
         li.appendChild(itemText);
         ul.appendChild(li);
       });
+
+      // Clear Items
+      ipcRenderer.on("item:clear", function () {
+        ul.innerHTML = "";
+      });
+
+      // Remove Items
+      ul.addEventListener("dblclick", removeItem);
+
+      function removeItem(e) {
+        e.target.remove();
+      }
     </script>
   </body>
 </html>
