--- a/addWindow.html
+++ b/addWindow.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <title>Add Shopping List Item</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css"
+    />
   </head>
   <body>
     <form>
