--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <title>Shopping list</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css"
+    />
   </head>
   <body>
     <h1>Shopping list</h1>
